tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions09(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions09.ts(4,21): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions09.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. If cp ≤ 65535, return cp.
    // (10000 == 65536)
    var x = /\u{10000}/gu;
                        ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    